REGRESSION (r160515): Frequent assertion failures on printing/print-close-crash.html https://bugs.webkit.org/show_bug.cgi?id=126014

Rolled out r160515 while Chris is investigating. Added FIXME comments in other
places where we use this pattern.

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::runJavaScriptAlert):
(WebKit::WebChromeClient::runJavaScriptConfirm):
(WebKit::WebChromeClient::runJavaScriptPrompt):
(WebKit::WebChromeClient::print):
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDecidePolicyForResponse):



Canonical link: https://commits.webkit.org/144005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160866 268f45cc-cd09-0410-ab3c-d52691b4dbfc